; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_cq_free_res.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/mlx4/extr_resource_tracker.c_cq_free_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@RES_CQ = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, i32, i32, i32, i32, i32*)* @cq_free_res to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cq_free_res(%struct.mlx4_dev* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca %struct.mlx4_dev*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %15 = load i32, i32* %9, align 4
  switch i32 %15, label %30 [
    i32 128, label %16
  ]

16:                                               ; preds = %6
  %17 = call i32 @get_param_l(i32* %11)
  store i32 %17, i32* %13, align 4
  %18 = load %struct.mlx4_dev*, %struct.mlx4_dev** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %13, align 4
  %21 = load i32, i32* @RES_CQ, align 4
  %22 = call i32 @rem_res_range(%struct.mlx4_dev* %18, i32 %19, i32 %20, i32 1, i32 %21, i32 0)
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* %14, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %16
  br label %33

26:                                               ; preds = %16
  %27 = load %struct.mlx4_dev*, %struct.mlx4_dev** %7, align 8
  %28 = load i32, i32* %13, align 4
  %29 = call i32 @__mlx4_cq_free_icm(%struct.mlx4_dev* %27, i32 %28)
  br label %33

30:                                               ; preds = %6
  %31 = load i32, i32* @EINVAL, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %14, align 4
  br label %33

33:                                               ; preds = %30, %26, %25
  %34 = load i32, i32* %14, align 4
  ret i32 %34
}

declare dso_local i32 @get_param_l(i32*) #1

declare dso_local i32 @rem_res_range(%struct.mlx4_dev*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @__mlx4_cq_free_icm(%struct.mlx4_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
